v2.3.0 (2019-07-30)
* Migrated from Semantic UI to Bootstrap.
* Slightly modified group editor UI (#282).
* Fixed bug where certain fields were not replaced (#202).
* Improved workflow when adding substitutions (#250).
* Added a help item in menus pointing to the FAQ.
* Updated XRegExp to version 4.2.4.

v2.2.3 (2019-05-23)
* Fixed bug where the input type dropdown was badly positioned (#248).
* Shortcut to open the replace bar changed to Ctrl+Shift+F9 (#266).
* Translated names of shortcut keys.

v2.2.2 (2018-11-23)
* Fixed bug introduced in v2.2.1 (#260).

v2.2.1 (2018-11-22)
* Consecutive groups with the same HMTL mode are applied at once without intermediate renders (where possible) to improve performance (#126).
* Cursor position or selection in text boxes is preserved (#15).
* Minor tweaks.

v2.2.0 (2018-03-19)
* The "Apply automatic substitutions on page load" item in the Tools menu is correctly initialized.
* Column widths and order are saved.
* Added checks to prevent saving substitutions with invalid regular expressions (#223, #236).
* Several UI improvements (#226):
  - Options are now saved automatically.
  - Added a confirmation before clearing the substitution list and moved the clear button to the right end.
  - The edit group button is larger and more separated from the remove button.
  - Substitution groups can be edited with double click.
  - The Delete key no longer removes the whole substitution while it's being edited.
* Updated ag-Grid to version 14.2.0.

v2.1.0 (2017-11-28)
* Added 3 modes for substitution groups (#206):
  - auto: used in auto-replace on load and auto-replace every n seconds
  - manual: used when manually applying the substitution list
  - auto&manual (default): used in both cases, equivalent to previous versions
* New list format 2.1 to include the mode.
* Dropped support for substitution lists in the 0.13 format.
* Context menu is now optional (#229).
* Fixed header names in substitutions tab in options.