@@ -137,6 +137,17 @@
       </div>
     </div>
 
+    <div id="importWarning" class="toast" role="alert">
+      <div class="toast-header">
+        <i class="fas fa-exclamation-triangle mr-1"></i>
+        <strong class="mr-auto i18n">warning</strong>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+      </div>
+      <div class="toast-body">
+        <div class="alert alert-warning"></div>
+      </div>
+    </div>
+
     <div id="groupEditorModal" class="modal" role="dialog">
       <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
