@@ -1,3 +1,5 @@
+* Added a version check when importing from file or URL.
+
 v2.3.0 (2019-07-30)
 * Migrated from Semantic UI to Bootstrap.
 * Slightly modified group editor UI (#282).
